# scheduler

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md  docker-compose.yml  example.ron
.github/workflows/: container_deply.yml
.sqlx/: query-1b83edf7543ae48f8b67de5a0d4800cf675364c7342a2c83c77b07923fb9598e.json  query-2a3ac86d07878da75bf32779802684e14cd5ca9e487cde4251f8df875c98199d.json  query-63a07d86b79e62e60432fdb05e8a52fb3203e1a7f9cbf288ac4d4fdc72020417.json  query-8bbf57907eb49ba0708c8884d77c2d03ec24fe4712fc8e22cab89bcdde82c18b.json
src/: error.rs  main.rs  parser.rs
src/cells/: cell.rs  mod.rs
src/cells/cell/: day.rs  groups.rs  para.rs  subgroup.rs  subject.rs  subject_type.rs  time.rs
src/database/: mod.rs
src/dicts/: lection_dict.rs  mod.rs  practice_dict.rs
src/telegram/: commands.rs  mod.rs  update.rs
src/telegram/keyboard/: mod.rs
src/telegram/update/: callback.rs  message.rs
src/user/: mod.rs
store/: algebra.ron  biologia.ron  device_and_function.ron  english.ron  history.ron  math_analyz.ron  office.ron  os_basics.ron  programming.ron  project.ron  sport.ron
