
[package]
name = "scheduler"
version = "1.0.0"
edition = "2024"
authors = ["TOwInOK <60252419+TOwInOK@users.noreply.github.com>"]
repository = "https://github.com/TOwInOK/scheduler"
license = "MIT"

[dependencies]
dotenvy = "0.15.7"
frankenstein = { version = "0.44.0", features = ["client-reqwest"] }
ron = "0.11.0"
serde = { version = "1.0.226", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "tls-rustls",
    "macros",
    "runtime-tokio",
    "time",
] }
thiserror = "2.0.16"
time = { version = "0.3.44", features = [
    "formatting",
    "macros",
    "serde",
    "std",
] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"


[profile.dev.package.sqlx-macros]
opt-level = 3
